--- a/daily/8/DeepLearning/myproject/cluster/config.json
+++ b/daily/8/DeepLearning/myproject/cluster/config.json
@@ -20,7 +20,17 @@
   "#00695C",
   "#7E57C2",
   "#015798",
-  "#FFEB3B"
+  "#FFEB3B",
+  "#89BEB2",
+  "#823935",
+  "#C9BA83",
+  "#DED38C",
+  "#DE9C53",
+  "#B2C8BB",
+  "#75794A",
+  "#458994",
+  "#725334",
+  "#F9CDAD"
  ],
  "refresh_interval": 1,
  "proposal_eps": 0.5,
@@ -28,14 +38,12 @@
  "pagerank_alpha": 0.85,
  "pagerank_topk": -1,
  "pagerank_maxiters": 300,
- "canvas_pos": false,
- "canvas_width": 1024,
- "canvas_height": 768,
+ "canvas_pos": true,
  "canvas_seed": 0,
- "canvas_pad": 0,
+ "canvas_iters": 100,
  "eig_maxtry": 5,
  "eig_supportDim": 500,
- "max_clusters": 18,
+ "max_clusters": 28,
  "minNode": 10,
  "max_complex": 1.8
 }
