--- a/c++/computerGraph/.vscode/settings.json
+++ b/c++/computerGraph/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "glut.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "string": "cpp",
+        "iostream": "cpp"
     }
 }
