--- a/c++/computerGraph/two/.vscode/settings.json
+++ b/c++/computerGraph/two/.vscode/settings.json
@@ -3,6 +3,8 @@
         "*.tcc": "cpp",
         "istream": "cpp",
         "iosfwd": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "ostream": "cpp",
+        "iostream": "cpp"
     }
 }
