--- a/c++/computerGraph/two/.vscode/settings.json
+++ b/c++/computerGraph/two/.vscode/settings.json
@@ -5,6 +5,7 @@
         "iosfwd": "cpp",
         "sstream": "cpp",
         "ostream": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "tuple": "cpp"
     }
 }
