--- a/c++/computerGraph/three/.vscode/settings.json
+++ b/c++/computerGraph/three/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "new": "cpp"
+        "new": "cpp",
+        "vector": "cpp",
+        "tuple": "cpp"
     }
 }
