--- a/c++/computerGraph/three/CMakeLists.txt
+++ b/c++/computerGraph/three/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
 project(three)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
 #添加 库RK4的目录
 link_directories(.)
 
