--- a/c++/computerGraph/pratice/.vscode/settings.json
+++ b/c++/computerGraph/pratice/.vscode/settings.json
@@ -35,6 +35,12 @@
         "utility": "cpp",
         "typeinfo": "cpp",
         "algorithm": "cpp",
-        "memory": "cpp"
+        "memory": "cpp",
+        "atomic": "cpp",
+        "bitset": "cpp",
+        "complex": "cpp",
+        "list": "cpp",
+        "string": "cpp",
+        "thread": "cpp"
     }
 }
