--- a/c++/computerGraph/pratice/CMakeLists.txt
+++ b/c++/computerGraph/pratice/CMakeLists.txt
@@ -4,4 +4,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 file(GLOB srcfile *.cpp)
 add_executable(myzxk ${srcfile})
-target_link_libraries(myzxk glut GL GLU vecmath  fltk_gl fltk dl m Xext X11)
+target_link_libraries(myzxk glut GL GLU vecmath)
