--- a/c++/computerGraph/four/.vscode/settings.json
+++ b/c++/computerGraph/four/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "cmath": "cpp",
         "iostream": "cpp"
-    }
+    },
+    "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools"
 }
