--- a/c++/qt/week1/qtopengl/CMakeLists.txt
+++ b/c++/qt/week1/qtopengl/CMakeLists.txt
@@ -20,30 +20,18 @@ find_package(Qt5OpenGL)
 # OpenGL & GLEW library
 find_package(OpenGL)
 
+file(GLOB header include/*)
+file(GLOB src src/*/*)
+
+include_directories(${header})
 add_executable(qtopengl
   main.cpp
-  mainwindow.cpp
-  mainwindow.h
-  mainwindow.ui
-  mesh.h
-  mesh.cpp
-  draw.h
-  draw.cpp
-  Camera.h
-  Camera.cpp
-  material.h
-  material.cpp
-  dialogmaterial.h
-  dialogmaterial.cpp
-  dialogmaterial.ui
-)
-
-#target_link_libraries(qtopengl PRIVATE Qt5::Widgets)
-#qt5_use_modules(qtopengl Widgets OpenGL)
-#target_link_libraries(qtopengl PRIVATE glut GL GLU)
+#  ${header}
+  ${src}
+ )
 
 
 qt5_use_modules(qtopengl Widgets OpenGL)
 target_link_libraries(qtopengl ${QT_LIBRARIES} ${OPENGL_LIBRARIES})
 target_link_libraries(qtopengl vecmath)
-
+target_include_directories(qtopengl PUBLIC ${header})
