--- a/c++/computerGraph/opengl/triangle/begin/CMakeLists.txt
+++ b/c++/computerGraph/opengl/triangle/begin/CMakeLists.txt
@@ -12,6 +12,6 @@ include_directories(include)
 link_directories(lib)
 
 #add_executable(begin main.cpp myutil.cpp youtubeDemo.cpp)
-add_executable(begin youtubeDemo.cpp myutil.cpp)
+add_executable(begin youtubeDemo.cpp myutil.cpp vertexbuffer.cpp indexbuffer.cpp)
 target_link_libraries(begin glfw3 GL GLEW gl3w dl pthread)
 target_link_libraries(begin X11 Xrandr Xinerama Xi Xxf86vm Xcursor)
