--- a/webrtc/websocket/videosignal/app/package.json
+++ b/webrtc/websocket/videosignal/app/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "node-static": "^0.7.11"
+    "node-static": "^0.7.11",
+    "socket.io": "^3.0.3"
   }
 }
