--- a/webrtc/kurento/pom.xml
+++ b/webrtc/kurento/pom.xml
@@ -75,7 +75,17 @@
             <artifactId>webrtc-adapter</artifactId>
             <version>7.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>draggabilly</artifactId>
+            <version>2.1.0</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>vue</artifactId>
+            <version>2.6.12</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
         <dependency>
             <groupId>com.alibaba</groupId>
